Github branching and merging test

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>GitHub Testing Version 2</title>
     <h1>This Heading is for Git Push flow</h1>
 </head>
 <body>
-    
+    <h1>We have added style.css file to test the git branch and Merge Mechanism</h1>
 </body>
 </html>
