Tracking Brancing and Merging at GitHub Level

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>We have added style.css file to test the git branch and Merge Mechanism</h1>
+    <h2>Now we are going to track the entire branching and merging at github level as well through git origin</h2>
 </body>
 </html>
